updated vizualization.py to the last version
tomorrow will be the last test for the OOP programming

--- a/group_eda/notebooks/robert-test/notebook_init.ipynb
+++ b/group_eda/notebooks/robert-test/notebook_init.ipynb
@@ -135,7 +135,8 @@
     "        self.myplot = myplot\n",
     "        if not os.path.exists(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\"):\n",
     "            os.mkdir(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\")\n",
-    "        plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\\scatter_all.html\", \n",
+    "\n",
+    "            plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\\scatter_all.html\", \n",
     "                    auto_open=False,\n",
     "                    image_width=1280, image_height=800,\n",
     "                    image_filename=\"scatter_all\", image='png')        \n",
@@ -154,10 +155,12 @@
     "        self.myplot = myplot\n",
     "        if not os.path.exists(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\"):\n",
     "            os.mkdir(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\")        \n",
-    "        plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\\line_all.html\", \n",
+    "            plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\\line_all.html\", \n",
     "            auto_open=False,\n",
     "            image_width=1280, image_height=800,\n",
     "            image_filename=\"line_all\", image='png')\n",
+    "        else:\n",
+    "            \n",
     "\n",
     "    def draw_boxplot(self):\n",
     "        myplot = px.box(data_frame=self.df,\n",
@@ -172,10 +175,12 @@
     "        self.myplot = myplot\n",
     "        if not os.path.exists(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\"):\n",
     "            os.mkdir(\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images\")        \n",
-    "        plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images/boxplot_all.html\", \n",
+    "            plot(myplot, filename=\"C:\\datascience\\eda-group-delivery-project\\Group_EDA\\documentation\\images/boxplot_all.html\", \n",
     "            auto_open=False,\n",
     "            image_width=1280, image_height=800,\n",
     "            image_filename=\"boxplot_all\", image='png')\n",
+    "        else:\n",
+    "\n",
     "    def draw_barplot(self):\n",
     "        myplot = px.bar(data_frame=self.df,\n",
     "        x=self.x_axis,\n",
