uploaded delivery docs
Thanks to @RMolleda and @alfonsogarcia-git for their time and patience

--- a/group_eda/notebooks/robert-test/notebook_init.ipynb
+++ b/group_eda/notebooks/robert-test/notebook_init.ipynb
@@ -18,7 +18,7 @@
    "display_name": "Python 3.9.0 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "c49414725a10925ce64f1a7c91399f6a4823416942062340df486dba231dfa6d"
+     "hash": "7812ea015bdcee6f23a998adcdd2ef97c151c0c241b7b7070987d9313e41299d"
     }
    }
   }
@@ -92,9 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-4-f45ae3994f8b>, line 67)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-f45ae3994f8b>\"\u001b[0;36m, line \u001b[0;32m67\u001b[0m\n\u001b[0;31m    def draw_boxplot(self):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "class Plotly_Plot():\n",
     "    '''\n",
@@ -240,6 +249,15 @@
     "Plotly_Plot(df = df, x_axis='date', y_axis='total_cases', x_label='DATE', y_label='CASOS', title='HEY', color='location').draw_barplot()\n",
     "Plotly_Plot(df = df, x_axis='date', y_axis='total_cases', x_label='DATE', y_label='CASOS', title='HEY', color='location').draw_line()\n",
     "Plotly_Plot(df = df, x_axis='date', y_axis='total_cases', x_label='DATE', y_label='CASOS', title='HEY', color='location').draw_piechart()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plotly_Plot(df = df, x_axis='date', y_axis='total_cases', x_label='DATE', y_label='CASOS', title='HEY', color='location').draw_piechart()"
    ]
   },
   {
